# FirnCorr

./: .gitignore  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml
.github/workflows/: python-request.yml  update-provider-database.yml
FirnCorr/: __init__.py  interpolate.py  regress.py  spatial.py  utilities.py  version.py
FirnCorr/data/: database.json
FirnCorr/datasets/: __init__.py  fetch_gesdisc.py  fetch_mar.py  fetch_mar_ftp.py
FirnCorr/io/: GSFCfdm.py  MAR.py  RACMO.py  __init__.py  dataset.py  model.py
doc/source/: conf.py  index.rst
doc/source/_assets/: firncorr-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: interpolate.rst  regress.rst  spatial.rst  utilities.rst
doc/source/api_reference/datasets/: datasets.rst  fetch_gesdisc.rst  fetch_mar.rst
doc/source/api_reference/io/: GSFCfdm.rst  MAR.rst  RACMO.rst  dataset.rst  io.rst  model.rst
doc/source/getting_started/: Contributing.rst  Install.rst
doc/source/project/: Citations.rst  Licenses.rst  Testing.rst
providers/: GSFC.json  MAR.json  _gsfc_fdm_providers.py  _mar_providers.py  _providers_to_database.py
test/: conftest.py  test_interpolate.py  test_spatial.py
